[package]
name = "winmsg"
version = "0.1.2"
edition = "2021"
description = "feature rich message box in windows"
license-file = "LICENSE.txt"
homepage = "https://github.com/thewh1teagle/winmsg"
documentation = "https://github.com/thewh1teagle/winmsg"
repository = "https://github.com/thewh1teagle/winmsg"
readme = "README.md"
keywords = ["windows", "winapi", "messagebox"]

[dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
